[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://screens/GameOver.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "high_score"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("HighScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -230.0
margin_bottom = -80.0
text = "GAME_OVER"
align = 1
valign = 1
autowrap = true

[node name="HighScoreLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -75.0
margin_right = 225.0
margin_bottom = 75.0
text = "HIGH_SCORE"
align = 1
valign = 1
autowrap = true

[node name="ShowButtonsTimer" type="Timer" parent="."]
one_shot = true

[node name="Buttons" type="Control" parent="."]

[node name="RetryButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = 450.0
margin_right = 375.0
margin_bottom = 493.0
text = "TRY_AGAIN"

[node name="MenuButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 75.0
margin_top = 500.0
margin_right = 375.0
margin_bottom = 543.0
text = "BACK_TO_MENU"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/high_score = SubResource( 2 )

[connection signal="pressed" from="Buttons/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_MenuButton_pressed"]
